@@ -48,6 +48,10 @@ final class StatisticsSetImplementation implements StatisticsSet {
   private final long[] m_longData;
   private final double[] m_doubleData;
 
+  // Transient fields are context specific. They are not serialised, nor are
+  // they added to other statistics sets. E.g. the "period" field.
+  private transient long[] m_transientLongData;
+
   // true => all statistics are zero; false => they might be.
   private boolean m_zero = true;
 
@@ -62,6 +66,8 @@ final class StatisticsSetImplementation implements StatisticsSet {
     m_statisticsIndexMap = statisticsIndexMap;
     m_longData = new long[m_statisticsIndexMap.getNumberOfLongs()];
     m_doubleData = new double[m_statisticsIndexMap.getNumberOfDoubles()];
+    m_transientLongData =
+      new long[m_statisticsIndexMap.getNumberOfTransientLongs()];
   }
 
   /**
@@ -72,6 +78,7 @@ final class StatisticsSetImplementation implements StatisticsSet {
     if (!m_zero) {
       Arrays.fill(m_longData, 0);
       Arrays.fill(m_doubleData, 0);
+      Arrays.fill(m_transientLongData, 0);
       m_zero = true;
       m_composite = false;
     }
@@ -93,10 +100,22 @@ final class StatisticsSetImplementation implements StatisticsSet {
 
     if (!m_zero) {
       synchronized (result) {
-        System.arraycopy(
-          m_longData, 0, result.m_longData, 0, result.m_longData.length);
-        System.arraycopy(
-          m_doubleData, 0, result.m_doubleData, 0, result.m_doubleData.length);
+        System.arraycopy(m_longData,
+                         0,
+                         result.m_longData,
+                         0,
+                         result.m_longData.length);
+
+        System.arraycopy(m_doubleData,
+                         0,
+                         result.m_doubleData,
+                         0,
+                         result.m_doubleData.length);
+
+        System.arraycopy(m_transientLongData,
+                         0,
+                         result.m_transientLongData,
+                         0, result.m_transientLongData.length);
 
         result.m_zero = false;
         result.m_composite = m_composite;
@@ -116,6 +135,10 @@ final class StatisticsSetImplementation implements StatisticsSet {
    * @return The value.
    */
   public synchronized long getValue(LongIndex index) {
+    if (index.isTransient()) {
+      return m_transientLongData[index.getValue()];
+    }
+
     return m_longData[index.getValue()];
   }
 
@@ -142,7 +165,13 @@ final class StatisticsSetImplementation implements StatisticsSet {
    * @param value The value.
    */
   public synchronized void setValue(LongIndex index, long value) {
-    m_longData[index.getValue()] = value;
+    if (index.isTransient()) {
+      m_transientLongData[index.getValue()] = value;
+    }
+    else {
+      m_longData[index.getValue()] = value;
+    }
+
     m_zero &= value == 0;
   }
 
@@ -170,8 +199,10 @@ final class StatisticsSetImplementation implements StatisticsSet {
    * @param value The value.
    */
   public synchronized void addValue(LongIndex index, long value) {
-    m_longData[index.getValue()] += value;
-    m_zero &= value == 0;
+    if (!index.isTransient()) {
+      m_longData[index.getValue()] += value;
+      m_zero &= value == 0;
+    }
   }
 
   /**
@@ -478,6 +509,14 @@ final class StatisticsSetImplementation implements StatisticsSet {
           return false;
         }
       }
+
+      final long[] otherTransientLongData = otherStatistics.m_transientLongData;
+
+      for (int i = 0; i < m_transientLongData.length; i++) {
+        if (m_transientLongData[i] != otherTransientLongData[i]) {
+          return false;
+        }
+      }
     }
 
     return true;
@@ -500,6 +539,10 @@ final class StatisticsSetImplementation implements StatisticsSet {
 
     for (int i = 0; i < m_doubleData.length; i++) {
       result ^= Double.doubleToRawLongBits(m_doubleData[i]);
+    }
+
+    for (int i = 0; i < m_transientLongData.length; i++) {
+      result ^= m_transientLongData[i];
     }
 
     return (int)(result ^ (result >> 32));
@@ -532,6 +575,16 @@ final class StatisticsSetImplementation implements StatisticsSet {
       }
 
       result.append(m_doubleData[i]);
+    }
+
+    result.append("}, {");
+
+    for (int i = 0; i < m_transientLongData.length; i++) {
+      if (i != 0) {
+        result.append(", ");
+      }
+
+      result.append(m_transientLongData[i]);
     }
 
     result.append("}, composite = ");
